Starter: Connect Postgress, test db table, add env, userDTO, userEntity, set gobalpipe, global prefix, dbconfig

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,21 @@
-NODE_ENV=
-PORT=
+NODE_ENV='development'
+PORT=3000
 
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
 
-JWT_SECRET=
+POSTGRES_HOST=
+POSTGRES_DB_PORT=
 
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+
+PGADMIN_DEFAULT_EMAIL=
+PGADMIN_DEFAULT_PASSWORD=
+
+
+KEYCLOAK_USER=
+KEYCLOAK_PASSWORD=
+KEYCLOAK_DB_VENDOR=
+KEYCLOAK_DB_DATABASE=
+KEYCLOAK_DB_USER=
+KEYCLOAK_DB_PASSWORD=
