Revised:#2 Found wrong logic & fixing on typs&validation

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 # Environment variables
 .env
 
+# Generate data in postgres
+sql-script.text
+question-database.json
+
 #docker
 docker-compose.yml
 
