--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.2.0",
     "@nestjs/typeorm": "^10.0.0",
-    "@types/uuid": "^9.0.2",
+    "@types/uuid": "^9.0.3",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -40,7 +40,8 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
